--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           </button>
 
           <ul class="mobile-menu list">
-            <li>
+            <li class="mobile-item">
               <a href="./index.html" class="link-mobile link-mobile__focus">Студія</a>
             </li>
-            <li><a href="./portfolio.html" class="link-mobile">Портфоліо</a></li>
-            <li><a href="" class="link-mobile">Контакти</a></li>
+            <li class="mobile-item"><a href="./portfolio.html" class="link-mobile">Портфоліо</a></li>
+            <li class="mobile-item"><a href="" class="link-mobile">Контакти</a></li>
           </ul>
 
           <ul class="mobile-menu mobile-menu__position list">
