adaptation for width 320px

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,19 +108,19 @@
 
           <ul class="section-item list">
             <li class="section-list">
-              <button class="btn-default section-btn border-btn" type="button">Усі</button>
+              <button class="btn-default section-btn section-btn__min border-btn" type="button">Усі</button>
             </li>
             <li class="section-list">
-              <button class="section-btn border-btn" type="button">Веб-сайти</button>
+              <button class="section-btn section-btn__min border-btn" type="button">Веб-сайти</button>
             </li>
             <li class="section-list">
-              <button class="section-btn border-btn" type="button">Додатки</button>
+              <button class="section-btn section-btn__min border-btn" type="button">Додатки</button>
             </li>
             <li class="section-list">
-              <button class="section-btn border-btn" type="button">Дизайн</button>
+              <button class="section-btn section-btn__min border-btn" type="button">Дизайн</button>
             </li>
             <li class="section-list">
-              <button class="section-btn border-btn" type="button">Маркетинг</button>
+              <button class="section-btn section-btn__min border-btn" type="button">Маркетинг</button>
             </li>
           </ul>
 
