--- a/index.html
+++ b/index.html
@@ -62,6 +62,39 @@
               >
             </li>
           </ul>
+          <ul class="list mobile__footer">
+                  <li class="icon-list">
+                    <a class="footer_section--advance" href="https://instagram.com">
+                      <svg class="icon" width="20" height="20">
+                        <use href="./svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="icon-list">
+                    <a class="footer_section--advance" href="https://twitter.com">
+                      <svg class="icon" width="20" height="20">
+                        <use href="./svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="icon-list">
+                    <a class="footer_section--advance" href="https://www.facebook.com/">
+                      <svg class="icon" width="20" height="20">
+                        <use href="./svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="icon-list">
+                    <a class="footer_section--advance" href="https://www.linkedin.com/">
+                      <svg class="icon" width="20" height="20">
+                        <use href="./svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
           <ul class="mobile-socials list">
             <li class="mobile-sites mobile-sites__line"><a href="">Instagram</a></li>
             <li class="mobile-sites mobile-sites__line"><a href="">Twitter</a></li>
@@ -539,7 +572,7 @@
         </div>
         <div class="footer_subscribe">
           <p class="footer_title">Приєднуйтеся</p>
-          <ul class="list footer_section">
+          <ul class="list footer_section footer_section--min">
             <li>
               <a class="footer_section--advance" href="https://instagram.com">
                 <svg class="footer_icon" width="20" height="20">
