--- a/index.html
+++ b/index.html
@@ -96,10 +96,22 @@
                   </li>
                 </ul>
           <ul class="mobile-socials list">
-            <li class="mobile-sites mobile-sites__line"><a href="">Instagram</a></li>
-            <li class="mobile-sites mobile-sites__line"><a href="">Twitter</a></li>
-            <li class="mobile-sites mobile-sites__line"><a href="">facebook</a></li>
-            <li class="mobile-sites mobile-sites__line"><a href="">Linkedin</a></li>
+            <li class="mobile-sites mobile-sites__line">
+              <a href="">Instagram
+                <!-- <svg class="header_line" width="1" height="30">
+                <use href="./svg/icons.svg#icon-line"></use>
+              </svg> -->
+              </a>
+            </li>
+            <li class="mobile-sites mobile-sites__line">
+              <a href="">Twitter</a>
+            </li>
+            <li class="mobile-sites mobile-sites__line">
+              <a href="">facebook</a>
+            </li>
+            <li class="mobile-sites mobile-sites__line">
+              <a href="">Linkedin</a>
+            </li>
           </ul>
         </div>
 
