made changes based on mentor's comments, change the pathes for img

--- a/index.html
+++ b/index.html
@@ -96,11 +96,8 @@
                   </li>
                 </ul>
           <ul class="mobile-socials list">
-            <li class="mobile-sites mobile-sites__line">
+            <li class="mobile-sites ">
               <a href="">Instagram
-                <!-- <svg class="header_line" width="1" height="30">
-                <use href="./svg/icons.svg#icon-line"></use>
-              </svg> -->
               </a>
             </li>
             <li class="mobile-sites mobile-sites__line">
@@ -278,9 +275,9 @@
                   ./img/laptop/team1_L_img_270.jpg   270w,
                   ./img/tab/team1_M_img_354.jpg      354w,
                   ./img/mobile/team1_img_450.jpg     450w,
-                  ./img/laptop/team1_L_img2x_540.jpg 540w,
+                  ./img/laptop/team1_L_img@2x_540.jpg 540w,
                   ./img/tab/team1_img@2x_708.jpg     708w,
-                  ./img/mobile/team1_img2x_900.jpg   900w
+                  ./img/mobile/team1_img@2x_900.jpg   900w
                 "
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 alt="Ігор Дем'яненко"
@@ -332,11 +329,11 @@
                 src="./img/mobile/team2_img_450.jpg"
                 srcset="
                   ./img/laptop/team2_L_img_270.jpg   270w,
-                  ./img/tab/team2_M_img_354.jpg      354w,
+                  ./img/tab/team2_M_img_354.jpg     354w,
                   ./img/mobile/team2_img_450.jpg     450w,
-                  ./img/laptop/team2_L_img2x_540.jpg 540w,
-                  ./img/tab/team2_img@2x_708.jpg     708w,
-                  ./img/mobile/team2_img2x_900.jpg   900w
+                  ./img/laptop/team2_L_img@2x_540.jpg 540w,
+                  ./img/tab/team2_M_img@2x_708.jpg    708w,
+                  ./img/mobile/team2_img@2x_900.jpg   900w
                 "
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 alt="Ольга Рєпіна"
@@ -389,9 +386,9 @@
                   ./img/laptop/team3_L_img_270.jpg   270w,
                   ./img/tab/team3_M_img_354.jpg      354w,
                   ./img/mobile/team3_img_450.jpg     450w,
-                  ./img/laptop/team3_L_img2x_540.jpg 540w,
-                  ./img/tab/team3_img@2x_708.jpg     708w,
-                  ./img/mobile/team3_img2x_900.jpg   900w
+                  ./img/laptop/team3_L_img@2x_540.jpg 540w,
+                  ./img/tab/team3_M_img@2x_708.jpg    708w,
+                  ./img/mobile/team3_img@2x_900.jpg  900w
                 "
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 alt="Микола Тарасов"
@@ -445,8 +442,8 @@
                   ./img/tab/team4_M_img_354.jpg      354w,
                   ./img/mobile/team4_img_450.jpg     450w,
                   ./img/laptop/team4_L_img2x_540.jpg 540w,
-                  ./img/tab/team4_img@2x_708.jpg     708w,
-                  ./img/mobile/team4_img2x_900.jpg   900w
+                  ./img/tab/team4_M_img@2x_708.jpg    708w,
+                  ./img/mobile/team4_img@2x_900.jpg  900w
                 "
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 alt="Михайло Єрмаков"
@@ -582,7 +579,7 @@
             </ul>
           </address>
         </div>
-        <div class="footer_subscribe">
+        <div class="footer_subscribe footer_subscribe--bottom">
           <p class="footer_title">Приєднуйтеся</p>
           <ul class="list footer_section footer_section--min">
             <li>
