--- a/portfolio.html
+++ b/portfolio.html
@@ -408,7 +408,7 @@
             </ul>
           </address>
         </div>
-        <div class="footer_subscribe">
+        <div class="footer_subscribe footer_subscribe--bottom">
           <p class="footer_title">Приєднуйтеся</p>
           <ul class="list footer_section">
             <li>
