add flex to portfolio_link corrected padding in advantage section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
       </section>
 
-      <section class="section_wrapper">
+      <section class="advantage_section">
         <div class="section_container">
           <h2 class="visually-hidden">Вигоди співпраці</h2>
           <ul class="advantage list">
